# cpp_sandbox

./: .gitignore  LICENSE  README.md
image_loader/: CMakeLists.txt
image_loader/include/lib_raster_image_loader/: raster_image_loader.hpp
image_loader/scripts/: build-from-docker.bash  build.bash  docker-run.bash  paths.bash.prefix  ros-context.source.bash  run
image_loader/src/: raster_image_loader.cpp
